fixed some of the css styling for the toggle hamburger menu on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ body {
   font-weight: 400;
   overflow-x: hidden;
   position: relative;
-  background-color: whitesmoke !important;
+  background-color: white !important;
   color: black !important;
   font-family: 'Poppins', sans-serif !important;
 }
@@ -65,7 +65,7 @@ nav.navbar {
 
 nav.navbar.scrolled {
   padding: 0px 0;
-  background-color: #efebe2
+  background-color: white
 }
 
 nav.navbar a.navbar-brand {
@@ -73,7 +73,7 @@ nav.navbar a.navbar-brand {
 }
 nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
-  color: #730072 !important;
+  color: #9C428A !important;
   letter-spacing: 0.9px;
   padding: 0 25px;
   font-size: 18px;
@@ -118,8 +118,8 @@ span.navbar-text {
 
 .navbar-text button {
   font-weight: 700;
-  color: #730072;
-  border: 1px solid #730072;
+  color: #9C428A;
+  border: 1px solid #9C428A;
   border-radius: 20px;
   padding: 10px 15px;
   font-size: 18px;
@@ -131,58 +131,50 @@ span.navbar-text {
 
 .navbar-text button:hover {
   color: #fff;
-  border: 1px solid #730072;
+  border: 1px solid #9C428A;
   background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.5) -5.91%, rgba(74, 47, 189, 0.5) 111.58%);
   border-radius: 20px;
 }
 
-/* nav.navbar .navbar-toggler:active,
-nav.navbar .navbar-toggler:focus {
-	outline: 10px;
-    box-shadow: none;
-} */
-
-/* line 1 of burger icon
-nav.navbar .navbar-toggler-icon:before {
-	width: 24px;
-	position: absolute;
-	height: 2px;
-	background-color: #730072;;
-	top: 0;
-	left: 0;
-	content: '';
-	z-index: 2;
-	transition: all 300ms linear;
+nav.custom-navbar .navbar-toggler:active,
+nav.custom-navbar .navbar-toggler:focus {
+  outline: none;
+  box-shadow: none;
 }
 
-line 2 of burger icon
-nav.navbar .navbar-toggler-icon {
+/* line 1 and 2 of burger icon */
+nav.custom-navbar .navbar-toggler-icon:after,
+nav.custom-navbar .navbar-toggler-icon:before {
+  width: 24px;
+  position: absolute;
+  height: 2px;
+  background-color: #9C428A;
+  left: 0;
+  content: '';
+  z-index: 2;
+  transition: all 300ms linear;
+}
+nav.custom-navbar .navbar-toggler-icon:after {
+  top: 8px;
+}
+
+/* line 3 of burger icon */
+nav.custom-navbar .navbar-toggler-icon {
   width: 24px;
   height: 17px;
   background-image: none;
   position: relative;
-  border-bottom: 2px solid #730072;;
+  border-bottom: 2px solid #9C428A;
   transition: all 300ms linear;
+  top: -2px;
 }
 
-line 3 of burger icon
-nav.navbar .navbar-toggler-icon:after {
-  width: 24px;
-	position: absolute;
-	height: 2px;
-	background-color: #730072;;
-	top: 8px;
-	left: 0;
-	content: '';
-	z-index: 2;
-	transition: all 300ms linear;
-} */
 
 /************ Banner Css ************/
 .banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
-  background-color: whitesmoke;
+  background-color: white;
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
